@startuml

title __GATEWAYS's Class Diagram__\n

  namespace  {
    namespace ain.java {
      namespace Gateways {
        class main.java.Gateways.AccessibilityOptionsGateway {
            # requestList : HashMap<String, ArrayList<AccessibilityOptions>>
            - requireListPath : String
            + AccessibilityOptionsGateway()
            + addRequest()
            + getRequestList()
            + removeRequest()
            + saveRequestList()
            + setStatus()
            # clearFileContentsUtil()
        }
      }
    }
  }
  

  namespace  {
    namespace ain.java {
      namespace Gateways {
        class main.java.Gateways.BuildingGateway {
            + BuildingGateway()
            + constructScheduleTxt()
            + read()
            + save()
        }
      }
    }
  }
  

  namespace  {
    namespace ain.java {
      namespace Gateways {
        abstract class main.java.Gateways.DatabaseGateway {
            - dbPath : String
            + DatabaseGateway()
            + clearFileContentsUtil()
            + getDbPath()
            {abstract} + read()
            {abstract} + save()
        }
      }
    }
  }
  

  namespace  {
    namespace ain.java {
      namespace Gateways {
        class main.java.Gateways.EventGateway {
            + EventGateway()
            + read()
            + save()
        }
      }
    }
  }
  

  namespace  {
    namespace ain.java {
      namespace Gateways {
        class main.java.Gateways.MessageGateway {
            # inbox : HashMap<String, ArrayList<Message>>
            # outbox : HashMap<String, ArrayList<Message>>
            - inboxPath : String
            - outboxPath : String
            + MessageGateway()
            + addNewMessage()
            + getInbox()
            + getOutbox()
            + removeMessage()
            + setInbox()
            + setOutbox()
            - clearFileContentsUtil()
        }
      }
    }
  }
  

  namespace  {
    namespace ain.java {
      namespace Gateways {
        class main.java.Gateways.UserLoginGateway {
            + UserLoginGateway()
            + read()
            + save()
        }
      }
    }
  }
  

  main.java.Gateways.AccessibilityOptionsGateway .up.|> java.io.Serializable
  main.java.Gateways.BuildingGateway -up-|> main.java.Gateways.DatabaseGateway
  main.java.Gateways.EventGateway -up-|> main.java.Gateways.DatabaseGateway
  main.java.Gateways.UserLoginGateway -up-|> main.java.Gateways.DatabaseGateway


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
